[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "SPINEPS"
version = "1.0.0"
description = "Framework for out-of-the box whole spine MRI segmentation."
authors = ["Hendrik Möller <hendrik.moeller@tum.de>"]
repository = "https://github.com/Gregory-Schwing-MD-PhD/spineps"
homepage = "https://github.com/Gregory-Schwing-MD-PhD/spineps"
license = "Apache License Version 2.0, January 2004"
readme = "README.md"
exclude = ["models", "examples"]

[tool.poetry.scripts]
spineps = 'spineps.entrypoint:entry_point'
spineps_ = 'spineps.entrypoint:entrypoint_no_checks'

[tool.poetry.dependencies]
# Python version matches Docker base image
python = "^3.10"

# CRITICAL: Pin torch to match base image pytorch/pytorch:2.3.1-cuda12.1-cudnn8-runtime
# This prevents duplicate installation
torch = "2.3.1"
torchvision = "0.18.1"  # Matches torch 2.3.1

# Core dependencies - ALL compatible with torch 2.3.1
connected-components-3d = "^3.12.3"
fill-voids = "^2.0.5"
nibabel = "^5.1.0"
numpy = ">=1.25.2,<2.0"  # Explicitly cap at <2.0 for compatibility
pathlib = "^1.0.1"
pytorch-lightning = "^2.0.8"
SciPy = "^1.11.2"
torchmetrics = "^1.1.2"
tqdm = "^4.66.1"
einops = "^0.6.1"

# Now we can use current versions!
nnunetv2 = "^2.4.2"  # Requires torch>=2.1.2 ✅
monai = "^1.3.0"     # Requires torch>=2.4.1 - will use 1.3.x which works with 2.3.1

TPTBox = "^0.4.0"
antspyx = "0.4.2"
rich = "^13.6.0"
acvl-utils = "0.2"
TypeSaveArgParse = "^1.0.1"

# Additional dependencies
pydicom = "*"
dicom2nifti = "*"
roboflow = "1.1.9"
Pillow = "*"
pandas = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pre-commit = "*"
coverage = ">=7.0.1"
pytest-mock = "^3.6.0"
joblib = "^1.3.2"
future = "^0.18.3"
flake8 = ">=4.0.1"

[tool.poetry-dynamic-versioning]
enable = true

[tool.ruff]
namespace-packages = ["datagen"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "spineps/Unet3D",
    "spineps/utils/data_iterators.py",
    "spineps/utils/default_preprocessor.py",
    "spineps/utils/export_prediction.py",
    "spineps/utils/get_network_from_plans.py",
    "spineps/utils/plans_handler.py",
    "spineps/utils/predictor.py",
    "spineps/utils/sliding_window_prediction.py",
    ".toml",
]
line-length = 140
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C901",
    "I",
    "N",
    "UP",
    "ASYNC",
    "BLE",
    "B",
    "A",
    "C4",
    "ICN",
    "G",
    "INP",
    "PIE",
    "PYI",
    "SIM",
    "TID",
    "INT",
    "ARG",
    "PTH",
    "TD005",
    "FIX003",
    "FIX004",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "AIR",
    "PERF",
    "FURB",
    "RUF",
]

ignore = [
    "F401",
    "BLE001",
    "E501",
    "N801",
    "PD002",
    "PERF203",
    "PTH123",
    "PGH003",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "SIM105",
    "TRY003",
    "UP038",
    "N999",
    "E741",
    "SIM118",
    "N802",
    "PLR2044",
    "B905",
    "UP007",
    "PLC0415",
    "UP045",
]

fixable = ["ALL"]
unfixable = []
ignore-init-module-imports = true
extend-safe-fixes = ["RUF015", "C419", "C408", "B006"]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
line-ending = "auto"
